évaluation et corrections mineures

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="layout-page">
         <header id="header" role="banner">
             <nav class="nav nav--header" role="navigation">
-                <a class="logo" hred="index.html">
+                <a class="logo" href="index.html">
                     <img src="images/logo-final.png" alt="Accueil (logo À la manière de)">
                 </a>
                 <ul class="nav__list nav__list--subList">
@@ -116,7 +116,7 @@
                         <li><a href="https://www.behance.net/jcdebroizea877">Behance</a>
                         <li>
                             <a
-                                href="https:designspartan.com/presentation/les-photomanipulations-orginales-de-jean-charles-debroize/">Design
+                                href="https://designspartan.com/presentation/les-photomanipulations-orginales-de-jean-charles-debroize/">Design
                                 Spartan</a>
                         </li>
                         <li><a href="http://www.studio-kerozen.com/">Studio Kerozen</a></li>
@@ -150,14 +150,14 @@
                 <h2>Sources des images</h2>
                 <ol>
                     <li>Illustration de ballons<br>
-                        <a href="https.//www.behance.net/gallery/44848523/Adobe-Creative-Cloud">
+                        <a href="https://www.behance.net/gallery/44848523/Adobe-Creative-Cloud">
                             behance.net/gallery/44848523/Adobe-Creative-Cloud</a>
                     </li>
                     <li>Enfant pilotant un oiseau<br>
                         <a href="https://www.behance.net/gallery/31608315/Mlodies-en-Courts">
                             behance.net/gallery/31608315/Mlodies-en-Courts</a>
                     </li>
-                    </li>
+<!--                    </li>-->
                     <li>Jeune fille chevauchant un ours<br>
                         <a href="https://www.behance.net/gallery/44945511/Adobe-Creative-Cloud">
                             behance.net/gallery/44945511/Adobe-Creative-Cloud</a>
